# http-range-reader

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: http_zip_demo.py
src/http_range_reader/: __init__.py  reader.py
tests/: test_reader_fake_backend.py  test_zip_integration.py
